--- a/stylesphere/templates/forgot_password.html
+++ b/stylesphere/templates/forgot_password.html
@@ -43,32 +43,25 @@
   </header>
   <section class="body">
     <div class="wrapper">
-      <div class="title"><span>Login </span></div>
-      {% for message in messages %}
-          <h5>
-              <div class=" text-danger text-center my-2" style="font-size: medium;">
-                  {{ message }}
-              </div>
-          </h5>
-      {% endfor %}
-      <form action="{% url 'signin' %}" method="post">
+      <div class="title"><span>Forgot Password </span></div>
+        {% for message in messages %}
+            <h5>
+                <div class=" text-danger text-center my-2" style="font-size: medium;">
+                    {{ message }}
+                </div>
+            </h5>
+        {% endfor %}
+        <form method="POST" action="{% url 'forgot_password' %}">
         {% csrf_token %}
-        <div class="row">
-          
-          <input type="text" name="username" placeholder="username" required />
-        </div>
-        <div class="row">
-          
-          <input type="password" name="password" placeholder="Password" required />
+        <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" id="email" name="email" class="form-control" required>
         </div>
   
         <div class="row button">
           <input type="submit" value="Login" />
         </div>
-        <div class="signup-link">Not a member? <a href="{% url 'signup' %}">Signup now</a></div>
-        <div class="forgot-link">
-          <a href="{% url 'forgot_password' %}">Forgot Password?</a>
-        </div>
+        <div class="signup-link">Back to SignIn <a href="{% url 'signin' %}">Signup now</a></div>
       </form>
     </div>
   </section>
